<?xml version="1.0"?>
<package>
  <name>pal_hardware_gazebo</name>
  <version>0.0.2</version>
  <description>The pal_hardware_gazebo package</description>

  <maintainer email="hilario@todo.todo">hilario</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>pal_ros_control</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>dynamic_introspection</build_depend>
  <build_depend>pal_robot_tools</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>pal_ros_control</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>dynamic_introspection</run_depend>
  <run_depend>pal_robot_tools</run_depend>

  <export>
    <gazebo_ros_control plugin="${prefix}/pal_hardware_gazebo_plugins.xml"/>
  </export>
  
</package>
